<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>onrobot_rg_control</name>
  <version>0.0.0</version>
  <description>Package to control an OnRobot RG2-FT gripper</description>
  <maintainer email="gawlinski.dorian@gmail.com">Dorian Gawlinski</maintainer>
  <license>Apache-2.0</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <exec_depend>ros2launch</exec_depend>
  <depend>pymodbus</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
