<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>onrobot_rg_control</name>
  <version>0.0.0</version>
  <description>RG2-FT control package</description>
  <maintainer email="gawlinski.dorian@gmail.com">gawlinski</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
   <depend>builtin_interfaces</depend>
   <depend>rosidl_default_generators</depend>
  <exec_depend>ros2launch</exec_depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
