<?xml version="1.0"?>

<package format="3">
    <name>onrobot_rg_msgs</name>
    <version>1.0.0</version>
    <description>Messages for the onrobot rg gripper control</description>
    <maintainer email="gawlinski.dorian@gmail.com">gawlinski</maintainer>
    <license>MIT</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <depend>builtin_interfaces</depend>
    <depend>rosidl_default_generators</depend>

    <member_of_group>rosidl_interface_packages</member_of_group>
    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
